--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -13,44 +13,24 @@
     "\n",
     "%load_ext line_profiler"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The line_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext line_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "source": [
     "dir_path = 'waypoints.csv'\n",
     "df = pd.read_csv(dir_path)\n",
     "x = df['x'].values\n",
     "y = df['y'].values"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 42
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "source": [
     "def initialise_cubic_spline(x, y, ds, bc_type):\n",
     "\n",
@@ -81,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "source": [
     "class Spline:\n",
     "\n",
@@ -258,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "source": [
     "ds = 0.1\n",
     "scipy_t = %timeit -o generate_cubic_spline_scipy(x, y, ds)\n",
@@ -269,8 +249,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "801 µs ± 33.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "70.5 ms ± 1.82 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "806 µs ± 45.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "71.9 ms ± 1.37 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -278,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "source": [
     "print(f\"Scipy test: \\n{scipy_t}\")\n",
     "print(f\"Python test: \\n{python_t}\")"
@@ -289,9 +269,9 @@
      "name": "stdout",
      "text": [
       "Scipy test: \n",
-      "801 µs ± 33.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "806 µs ± 45.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
       "Python test: \n",
-      "70.5 ms ± 1.82 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "71.9 ms ± 1.37 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -299,9 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "source": [
-    "%lprun -f generate_cubic_spline_scipy generate_cubic_spline_scipy(x, y, ds)"
+    "%lprun -f generate_cubic_spline_scipy -f initialise_cubic_spline generate_cubic_spline_scipy(x, y, ds)"
    ],
    "outputs": [
     {
@@ -310,29 +290,41 @@
      "text": [
       "Timer unit: 1e-06 s\n",
       "\n",
-      "Total time: 0.002033 s\n",
-      "\n",
-      "Could not find file /tmp/ipykernel_15806/2262770606.py\n",
-      "Are you sure you are running this program from the same directory\n",
-      "that you ran the profiler from?\n",
-      "Continuing without the function's contents.\n",
+      "Total time: 0.001052 s\n",
+      "File: <ipython-input-3-60da23efd5a0>\n",
+      "Function: initialise_cubic_spline at line 1\n",
       "\n",
       "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
       "==============================================================\n",
-      "    10                                           \n",
-      "    11                                           \n",
-      "    12         1        760.0    760.0     37.4  \n",
+      "     1                                           def initialise_cubic_spline(x, y, ds, bc_type):\n",
+      "     2                                           \n",
+      "     3         1         80.0     80.0      7.6      distance = np.concatenate(([0], np.cumsum(np.hypot(np.ediff1d(x), np.ediff1d(y)))))\n",
+      "     4         1         93.0     93.0      8.8      s = np.arange(0, distance[-1], ds)\n",
+      "     5         1         52.0     52.0      4.9      points = np.array([x, y]).T\n",
+      "     6         1        825.0    825.0     78.4      cs = CubicSpline(distance, points, bc_type=bc_type, axis=0, extrapolate=False)\n",
+      "     7                                           \n",
+      "     8         1          2.0      2.0      0.2      return cs, s\n",
+      "\n",
+      "Total time: 0.001826 s\n",
+      "File: <ipython-input-3-60da23efd5a0>\n",
+      "Function: generate_cubic_spline_scipy at line 10\n",
+      "\n",
+      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
+      "==============================================================\n",
+      "    10                                           def generate_cubic_spline_scipy(x, y, ds=0.05, bc_type='natural'):\n",
+      "    11                                               \n",
+      "    12         1       1063.0   1063.0     58.2      cs, s = initialise_cubic_spline(x, y, ds, bc_type)\n",
       "    13                                           \n",
-      "    14                                           \n",
-      "    15         1        241.0    241.0     11.9  \n",
-      "    16         1        175.0    175.0      8.6  \n",
+      "    14                                               # dx = dcs[0],  dy = dcs[1], ddx = ddcs[0],  ddy = ddcs[1]\n",
+      "    15         1        196.0    196.0     10.7      dcs = cs.derivative(1)(s).T\n",
+      "    16         1        168.0    168.0      9.2      yaw = np.arctan2(dcs[1], dcs[0])\n",
       "    17                                           \n",
-      "    18         1        160.0    160.0      7.9  \n",
-      "    19         1        489.0    489.0     24.1  \n",
+      "    18         1        141.0    141.0      7.7      ddcs = cs.derivative(2)(s).T\n",
+      "    19         1        141.0    141.0      7.7      curvature = (ddcs[1]*dcs[0] - ddcs[0]*dcs[1]) / ((dcs[0]*dcs[0] + dcs[1]*dcs[1])**1.5)\n",
       "    20                                           \n",
-      "    21         1        206.0    206.0     10.1  \n",
+      "    21         1        116.0    116.0      6.4      cs_points = cs(s).T\n",
       "    22                                           \n",
-      "    23         1          2.0      2.0      0.1"
+      "    23         1          1.0      1.0      0.1      return cs_points[0], cs_points[1], yaw, curvature"
      ]
     }
    ],
@@ -340,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "source": [
     "%lprun -f generate_cubic_path generate_cubic_path(x, y, ds)"
    ],
@@ -351,37 +343,34 @@
      "text": [
       "Timer unit: 1e-06 s\n",
       "\n",
-      "Total time: 0.178585 s\n",
-      "\n",
-      "Could not find file /tmp/ipykernel_15806/4278668345.py\n",
-      "Are you sure you are running this program from the same directory\n",
-      "that you ran the profiler from?\n",
-      "Continuing without the function's contents.\n",
+      "Total time: 0.169023 s\n",
+      "File: <ipython-input-4-dcf38cb0b471>\n",
+      "Function: generate_cubic_path at line 148\n",
       "\n",
       "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
       "==============================================================\n",
-      "   148                                           \n",
+      "   148                                           def generate_cubic_path(x, y, ds=0.05):\n",
       "   149                                           \n",
-      "   150         1          2.0      2.0      0.0  \n",
-      "   151                                           \n",
-      "   152                                           \n",
+      "   150         1          2.0      2.0      0.0      if len(x) != len(y):\n",
+      "   151                                                   print(\"Length of x and y must be equal\")\n",
+      "   152                                                   exit()\n",
       "   153                                           \n",
-      "   154         1       1451.0   1451.0      0.8  \n",
-      "   155         1         15.0     15.0      0.0  \n",
+      "   154         1       1680.0   1680.0      1.0      sp2d = Spline2D(x, y)\n",
+      "   155         1         15.0     15.0      0.0      s = np.arange(0, sp2d.s[-1], ds)\n",
       "   156                                           \n",
-      "   157         1          1.0      1.0      0.0  \n",
-      "   158         1          1.0      1.0      0.0  \n",
-      "   159         1          1.0      1.0      0.0  \n",
-      "   160         1          1.0      1.0      0.0  \n",
+      "   157         1          0.0      0.0      0.0      px = []\n",
+      "   158         1          0.0      0.0      0.0      py = []\n",
+      "   159         1          0.0      0.0      0.0      pyaw = []\n",
+      "   160         1          0.0      0.0      0.0      pk = []\n",
       "   161                                           \n",
-      "   162      6645       3004.0      0.5      1.7  \n",
-      "   163      6644      39827.0      6.0     22.3  \n",
-      "   164      6644       3106.0      0.5      1.7  \n",
-      "   165      6644       2607.0      0.4      1.5  \n",
-      "   166      6644      51809.0      7.8     29.0  \n",
-      "   167      6644      76759.0     11.6     43.0  \n",
+      "   162      6645       2850.0      0.4      1.7      for i in s:\n",
+      "   163      6644      37311.0      5.6     22.1          ix, iy = sp2d.calculate_position(i)\n",
+      "   164      6644       2732.0      0.4      1.6          px.append(ix)\n",
+      "   165      6644       2522.0      0.4      1.5          py.append(iy)\n",
+      "   166      6644      48376.0      7.3     28.6          pyaw.append(sp2d.calculate_yaw(i))\n",
+      "   167      6644      73535.0     11.1     43.5          pk.append(sp2d.calculate_curvature(i))\n",
       "   168                                           \n",
-      "   169         1          1.0      1.0      0.0"
+      "   169         1          0.0      0.0      0.0      return px, py, pyaw, pk"
      ]
     }
    ],
@@ -389,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -436,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "source": [
     "calculate_1d_cosine_similarity = lambda a, b : np.dot(a, b) / (np.linalg.norm(a)*np.linalg.norm(b))\n",
     "\n",
