--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SciPyCubicSpline vs PyCubicSpline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -28,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Waypoints"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -40,12 +54,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SciPyCubicSpline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def initialise_cubic_spline(x: ArrayLike, y: ArrayLike, ds: ArrayLike, bc_type: str) -> tuple[CubicSpline, ndarray]:\n",
+    "def initialise_cubic_spline(x: ArrayLike, y: ArrayLike, ds: float, bc_type: str) -> tuple[CubicSpline, ndarray]:\n",
     "\n",
     "    distance = np.concatenate((np.zeros(1), np.cumsum(np.hypot(np.ediff1d(x), np.ediff1d(y)))))\n",
     "    points = np.array([x, y]).T\n",
@@ -53,7 +74,7 @@
     "    cs = CubicSpline(distance, points, bc_type=bc_type, axis=0, extrapolate=False)\n",
     "    return cs, s\n",
     "\n",
-    "def generate_cubic_spline_scipy(x: ArrayLike, y: ArrayLike, ds: float=0.05, bc_type: str='natural') -> tuple[ndarray, ndarray, ndarray, ndarray]:\n",
+    "def scipycubicspline(x: ArrayLike, y: ArrayLike, ds: float=0.05, bc_type: str='natural') -> tuple[ndarray, ndarray, ndarray, ndarray]:\n",
     "    \n",
     "    cs, s = initialise_cubic_spline(x, y, ds, bc_type)\n",
     "\n",
@@ -65,6 +86,13 @@
     "\n",
     "    cx, cy = cs(s).T\n",
     "    return cx, cy, yaw, curvature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyCubicSpline"
    ]
   },
   {
@@ -220,11 +248,7 @@
     "\n",
     "        return k\n",
     "\n",
-    "def generate_cubic_path(x, y, ds=0.05):\n",
-    "\n",
-    "    if len(x) != len(y):\n",
-    "        print(\"Length of x and y must be equal\")\n",
-    "        exit()\n",
+    "def pycubicspline(x, y, ds=0.05):\n",
     "\n",
     "    sp2d = Spline2D(x, y)\n",
     "    s = np.arange(0, sp2d.s[-1], ds)\n",
@@ -245,6 +269,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests\n",
+    "\n",
+    "- SciPyCubicSpline should be faster than PyCubicSpline\n",
+    "- SciPyCubicSpline should be more or similar in accuracy than PyCubicSpline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TimeIt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -259,9 +300,11 @@
     }
    ],
    "source": [
+    "%%capture\n",
+    "\n",
     "ds = 0.1\n",
-    "scipy_t = %timeit -o generate_cubic_spline_scipy(x, y, ds)\n",
-    "python_t = %timeit -o generate_cubic_path(x, y, ds)"
+    "scipycubicspline_t  = %timeit -o scipycubicspline(x, y, ds)\n",
+    "pycubic_spline_t = %timeit -o pycubicspline(x, y, ds)"
    ]
   },
   {
@@ -281,8 +324,15 @@
     }
    ],
    "source": [
-    "print(f\"Scipy test: \\n{scipy_t}\")\n",
-    "print(f\"Python test: \\n{python_t}\")"
+    "print(f\"SciPyCubicSpline test: \\n{scipycubicspline_t}\")\n",
+    "print(f\"PyCubicSpline test: \\n{pycubic_spline_t}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Profiling"
    ]
   },
   {
@@ -332,7 +382,7 @@
     }
    ],
    "source": [
-    "%lprun -f generate_cubic_spline_scipy -f initialise_cubic_spline generate_cubic_spline_scipy(x, y, ds)"
+    "%lprun -f generate_cubic_spline_scipy -f initialise_cubic_spline scipycubicspline(x, y, ds)"
    ]
   },
   {
@@ -378,7 +428,14 @@
     }
    ],
    "source": [
-    "%lprun -f generate_cubic_path generate_cubic_path(x, y, ds)"
+    "%lprun -f generate_cubic_path pycubicspline(x, y, ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accuracy"
    ]
   },
   {
@@ -402,8 +459,8 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "sx, sy, syaw, sk = generate_cubic_spline_scipy(x, y, ds)\n",
-    "px, py, pyaw, pk = generate_cubic_path(x, y, ds)\n",
+    "sx, sy, syaw, sk = scipycubicspline(x, y, ds)\n",
+    "px, py, pyaw, pk = pycubicspline(x, y, ds)\n",
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(15, 5), dpi=600)\n",
     "\n",
@@ -426,6 +483,13 @@
     "ax[2].legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Similarity"
    ]
   },
   {
