--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -30,6 +30,7 @@
     "from bisect import bisect\n",
     "from scipy.interpolate import CubicSpline\n",
     "from matplotlib import pyplot as plt\n",
+    "from csv import reader\n",
     "\n",
     "%load_ext line_profiler"
    ]
@@ -47,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_path = 'waypoints.csv'\n",
-    "df = pd.read_csv(dir_path)\n",
-    "x = df['x'].values\n",
-    "y = df['y'].values"
+    "with open('waypoints.csv', newline='', encoding='utf-8') as file:\n",
+    "    rows = list(reader(file, delimiter=','))\n",
+    "\n",
+    "x, y = [[float(i) for i in row] for row in zip(*rows[1:])]"
    ]
   },
   {
@@ -517,11 +518,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "57f26ffe740c5f0d472a9f25ed66cf4abb3f98049bb3b97f17b3f14c481ed229"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('optimizer': conda)",
+   "display_name": "optti",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -534,9 +533,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "4fa5db75889cfb5bf79005d2baa3a9ae82d657ce7587cd3dfa9636cdf8afe9fa"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
